[project]
name = "2024-09-19"
version = "0.1.0"
description = "Files for the 2024-09-19 event"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.2",
    "duckdb>=1.0.0",
    "duckdb-engine>=0.13.1",
    "jupysql>=0.10.12",
    "jupyterlab>=4.2.5",
    "jupyterlab-rise>=0.42.0",
    "toml>=0.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
